
[package]
name = "solana_hft_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "5.5"
solana-client = "1.17.18"
solana-sdk = "1.17.18"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
tokio = { version = "1.37", features = ["full", "rt-multi-thread"] }
reqwest = { version = "0.11.27", features = ["json"] }
serde_json = "1.0.114"
serde = { version = "1.0.202", features = ["derive"] }
bs58 = "0.5"
dotenv = "0.15.7"
base64 = "0.21.7"
futures = "0.3.30"
thiserror = "1.0.59"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
solana-transaction-status = "1.17.18"
